--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -189,65 +189,77 @@
       markup: |
         <div class="expandable expandable__expanded">
             <div class="expandable_header expandable_header__spaced">
-                <!-- <h5>Blog filtered by</h5>
-                <ul class="list list__horizontal">
-                    <li class="list_item">
-                        <a href="?filter_category=consumer">
-                            Consumer
-                        </a>
-                    </li>
-                </ul> -->
-                <a class="expandable_target btn btn-secondary"
-                   href="#post-filters-form">
-                    Filter posts&nbsp;&nbsp;
-                    <span class="expandable_cue-open">
-                        <span class="cf-icon cf-icon-down"></span>
-                    </span>
-                    <span class="expandable_cue-close">
-                        <span class="cf-icon cf-icon-up"></span>
-                    </span>
-                </a>
+                <div class="div expandable_header-right">
+                    <a class="expandable_target btn btn-secondary"
+                       href="#post-filters-form">
+                        Filter posts&nbsp;&nbsp;
+                        <span class="expandable_cue-open">
+                            <span class="cf-icon cf-icon-down"></span>
+                        </span>
+                        <span class="expandable_cue-close">
+                            <span class="cf-icon cf-icon-up"></span>
+                        </span>
+                    </a>
+                </div>
+                <div class="expandable_header-left">
+                    <dl class="list list__horizontal">
+                        <span class="h5">Blog filtered by</span>&nbsp;
+                        <a href="?filter_category=consumer">Consumer</a>,
+                        <a href="?filter_category=students">Students</a>
+                    </dl>
+                </div>
             </div>
             <div class="expandable_content padded-container">
                 <form class="padded-container_body" id="post-filters-form" method="get">
-                    <div class="filter_cols">
-                        <div class="filter_col filter_col-1-3">
+                    <div class="form-l form-l__flush">
+                        <div class="form-l_col form-l_col-1-3">
                             <div class="form-group">
                                 <label class="form-label-header">
-                                    Filter column 1
+                                    Categories
                                 </label>
                                 <label class="form-group_item form-label">
-                                    <input type="checkbox" name="" value="">
-                                    Checkbox 1
+                                    <input type="checkbox" name="filter_category" value="consumer">
+                                    Announcements &amp; updates
                                 </label>
                                 <label class="form-group_item form-label">
-                                    <input type="checkbox" name="" value="">
-                                    Checkbox 2
+                                    <input type="checkbox" name="filter_category" value="regulation & compliance">
+                                    Consumer information
+                                </label>
+                                <label class="form-group_item form-label">
+                                    <input type="checkbox" name="filter_category" value="innovation">
+                                    Engagement
+                                </label>
+                                <label class="form-group_item form-label">
+                                    <input type="checkbox" name="filter_category" value="announcements">
+                                    Innovation &amp; data
                                 </label>
                             </div>
                         </div>
-                        <div class="filter_col filter_col-1-3">
+                        <div class="form-l_col form-l_col-1-3">
                             <div class="form-group">
                                 <label class="form-label-header">
-                                    Filter column 2
+                                    Topics
                                 </label>
-                                <input type="text" name="" value="">
+                                <input type="text" name="filter_tags" value="">
                             </div>
-                        </div>
-                        <div class="filter_col filter_col-1-3">
                             <div class="form-group">
                                 <label class="form-label-header">
-                                    Filter column 3
+                                    Author
                                 </label>
-                                <input type="text" name="" value="">
+                                <input type="text" name="filter_author" value="">
                             </div>
                         </div>
+                        <!-- <div class="form-l_col form-l_col-1-3">
+                            <div class="form-group">
+                                <label class="form-label-header">
+                                    Date range
+                                </label>
+                            </div>
+                        </div> -->
                     </div>
-                    <div class="filter-actions filter-actions__right form-actions">
-                        <input type="reset" value="Reset filters"
-                               class="btn btn-warning btn-link form-actions_item">
-                        <input type="submit" value="Apply filters"
-                               class="btn form-actions_item">
+                    <div class="form-actions form-actions__right-on-med">
+                        <input type="reset" value="Reset filters" class="btn btn-warning btn-link form-actions_item">
+                        <input type="submit" value="Apply filters" class="btn form-actions_item">
                     </div>
                 </form>
             </div>
